--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <canvas id="gameBoard"></canvas>
+    <canvas id="gameBoard" width="700" height="700"></canvas>
     <script src="./app.js"></script>
   </body>
 </html>
